--- a/app/src/main/res/layout/net_image.xml
+++ b/app/src/main/res/layout/net_image.xml
@@ -19,9 +19,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:max="100"
         android:layout_centerVertical="true"
+        android:layout_marginEnd="100dp"
         android:layout_toEndOf="@+id/image"
-        android:indeterminate="false" />
+        android:indeterminate="false"
+        android:max="100" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/colorAccent"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:text="Small Text"
+        android:textAppearance="?android:attr/textAppearanceSmall" />
 
 </RelativeLayout>
