--- a/app/src/main/res/menu/clear.xml
+++ b/app/src/main/res/menu/clear.xml
@@ -14,11 +14,21 @@
   ~ limitations under the License.
   -->
 
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
     <item
         android:id="@+id/clear"
-        android:title="Clear tasks"
         android:showAsAction="never"
+        android:title="Clear cache"
+        tools:ignore="AppCompatResource" />
+    <item
+        android:id="@+id/clear_mem"
+        android:showAsAction="never"
+        android:title="Clear mem cache"
+        tools:ignore="AppCompatResource" />
+    <item
+        android:id="@+id/clear_disc"
+        android:showAsAction="never"
+        android:title="Clear disk cache"
         tools:ignore="AppCompatResource" />
 </menu>
