--- a/app/src/main/res/layout/net_image_layout.xml
+++ b/app/src/main/res/layout/net_image_layout.xml
@@ -29,7 +29,7 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/accent"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:text="Small Text"
