--- a/app/src/main/res/layout/simple_card_item.xml
+++ b/app/src/main/res/layout/simple_card_item.xml
@@ -37,7 +37,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
+        android:layout_marginLeft="24dp"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         tools:ignore="RtlHardcoded">
@@ -59,6 +59,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@android:id/title"
+            android:text="No description for this test"
             android:layout_marginTop="6dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textColor="@color/secondary_text" />
